--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@ body {
     --gutter: 30px;
     --footer-height: 25px;
 
-    font-family: 'Titillium Web', sans-serif;
+    font-family: "PT Sans", "Helvetica Neue", Arial, Helvetica,
     background-color: var(--color2);
 }
 
@@ -61,9 +61,10 @@ header {
     box-shadow: var(--shadow);
 }
 
-h2 {
-    font-size: 1.8rem;
-    font-weight: bold;
+h1 {
+    font-size: 3rem;
+    font-weight: 900;
+    color: var(--color1);
 }
 
 .gutter-right {
