--- a/styles/style.css
+++ b/styles/style.css
@@ -26,8 +26,8 @@ body {
     --gutter: 30px;
     --footer-height: 25px;
 
-    font-family: "PT Sans", "Helvetica Neue", Arial, Helvetica,
-    background-color: var(--color2);
+    font-family: 'PT Sans', 'Helvetica Neue', Arial, Helvetica;
+    background-color: var(--color5);
 }
 
 main {
@@ -42,6 +42,7 @@ main {
 section {
     background-color: var(--color5);
     max-width: 80%;
+    max-height: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -65,6 +66,7 @@ h1 {
     font-size: 3rem;
     font-weight: 900;
     color: var(--color1);
+    height: 900px;
 }
 
 .gutter-right {
@@ -88,30 +90,36 @@ footer {
     justify-content: flex-end;
     background-image: var(--color5);
     box-shadow: var(--shadow);
+    background-color: var(--color5);
 }
 
 .city-images {
-    height: 100%;
+    max-height: 960px;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
+    row-gap: 20px;
 }
 
 .city-images img {
     width: 400px;
     height: 300px;
+    border-radius: 50px;
 }
 
 section {
     display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    width: 80%;
+    max-height: 1200px;
 }
 
 .user-inputs {
     height: 100%;
+    max-height: 1000px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    background-color: var(--color1);
+    grid-template-columns: 1fr;
+    grid-template-rows: 3fr 1fr 1fr 1fr 1fr;
+    background-color: var(--color5);
 }
 .user-inputs > div {
     height: 100%;
