--- a/styles/style.css
+++ b/styles/style.css
@@ -94,9 +94,10 @@ footer {
 }
 
 .city-images {
-    max-height: 960px;
+    max-height: 980px;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
+    padding: 20px;
     row-gap: 20px;
 }
 
@@ -117,8 +118,7 @@ section {
     height: 100%;
     max-height: 1000px;
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 3fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 200px 200px 200px 200px 200px;
     background-color: var(--color5);
 }
 .user-inputs > div {
